RESOLVED FIXED126087
AudioSessionManager should be MediaSessionManager
https://bugs.webkit.org/show_bug.cgi?id=126087
Summary AudioSessionManager should be MediaSessionManager
Eric Carlson
Reported 2013-12-20 15:04:38 PST
AudioSessionManager tracks Audio, Video, and WebAudio instances so it should be a MediaSessionManager instead. Some platforms may need to manage other aspects of media playback, eg. limiting the number instances that can play simultaneously, when a media is allowed to play, etc, it should be refactored so it is possible for the session manager to inform clients of state changes.
Attachments
Proposed patch (41.46 KB, patch)
2013-12-20 18:38 PST, Eric Carlson
no flags
Updated patch (41.49 KB, patch)
2013-12-20 18:52 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-12-20 18:38:55 PST
Created attachment 219825 [details] Proposed patch
WebKit Commit Bot
Comment 2 2013-12-20 18:40:49 PST
Attachment 219825 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/WebCore.xcodeproj/project.pbxproj', u'Source/WebCore/html/HTMLMediaElement.cpp', u'Source/WebCore/html/HTMLMediaElement.h', u'Source/WebCore/platform/audio/AudioSessionListener.h', u'Source/WebCore/platform/audio/AudioSessionManager.cpp', u'Source/WebCore/platform/audio/AudioSessionManager.h', u'Source/WebCore/platform/audio/MediaSessionManager.cpp', u'Source/WebCore/platform/audio/MediaSessionManager.h', u'Source/WebCore/platform/audio/mac/AudioDestinationMac.cpp', u'Source/WebCore/platform/audio/mac/AudioDestinationMac.h', u'Source/WebCore/platform/audio/mac/AudioSessionManagerMac.cpp', u'Source/WebCore/platform/audio/mac/MediaSessionManagerMac.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/audio/mac/AudioDestinationMac.cpp:37: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/audio/MediaSessionManager.cpp:64: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/platform/audio/MediaSessionManager.cpp:78: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 3 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 3 2013-12-20 18:52:09 PST
Created attachment 219827 [details] Updated patch
Jer Noble
Comment 4 2013-12-23 09:51:08 PST
Comment on attachment 219827 [details] Updated patch r=me
WebKit Commit Bot
Comment 5 2013-12-23 10:20:41 PST
Comment on attachment 219827 [details] Updated patch Clearing flags on attachment: 219827 Committed r161000: <http://trac.webkit.org/changeset/161000>
WebKit Commit Bot
Comment 6 2013-12-23 10:20:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.